--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -32,7 +32,7 @@
 
         <img src= "./images/image-qr-code.png" />
       </div>
-      <div class="anoda1">
+      <div class="note">
 
         <h1> Improve your front-end skills by building projects</h1>
       </div>
