--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="stylesheet" type="image/png" sizes="32x32" href="index.css">
-<link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" type="image/png" sizes="32x32" href="./index.css">
+<link rel="stylesheet" href="./index.css">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,7 +30,7 @@
       
       <div class="QR">
 
-        <img src= "./images/image-qr-code.png" />
+        <img src= "./images/image-qr-code.png"/>
       </div>
       <div class="note">
 
