--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -30,7 +30,7 @@
       
       <div class="QR">
 
-        <img src= "./images/image-qr-code.png"/>
+        <img src= "../Images/image-qr-code.png"/>
       </div>
       <div class="note">
 
