--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
       <div class="QR">
 
-        <img src= "./image-qr-code.png" />
+        <img src= "./Images/image-qr-code.png" />
       </div>
       <div class="anoda1">
 
