--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="stylesheet" type="image/png" sizes="32x32" href="./style.css">
+  <!-- <link rel="stylesheet" type="text/css" sizes="32x32" href="./i"> -->
+  <!-- <link rel="stylesheet" href="/style.css"> -->
 <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | QR code component</title>
 
@@ -30,9 +31,9 @@
       
       <div class="QR">
 
-        <img src= "./Images/image-qr-code.png" />
+        <img src= "../Images/image-qr-code.png"/>
       </div>
-      <div class="anoda1">
+      <div class="note">
 
         <h1> Improve your front-end skills by building projects</h1>
       </div>
