--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
       <div class="QR">
 
-        <img src= "../Images/image-qr-code.png"/>
+        <img src= "/qr-code-component-main/images/image-qr-code.png"/>
       </div>
       <div class="note">
 
