--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="attribution">
       
       <div class="QR">
-        <img src= "qr-code-component-main/images/image-qr-code.png"/>
+        <img src= "./qr-code-component-main/images/image-qr-code.png" alt="qrcode"/>
       </div>
       <div class="note">
 
