--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
     <div class="attribution">
       
       <div class="QR">
-        <img src= "./qr-code-component-main/images/image-qr-code.png" alt="qrcode"/>
+        <img src= "qr-code-component-main/images/qrcode.png" alt="qrcode"/>
       </div>
       <div class="note">
-
         <h1> Improve your front-end skills by building projects</h1>
       </div>
       <div class="codeRT">
